# notepad-plus-plus

./: .gitignore  .gitmodules  CmakeLists.txt
PowerEditor/gcc/include/: various.h
PowerEditor/src/: CMakeLists.txt  CMakeLists.txt.try.bad1  Notepad_plus.cpp  Notepad_plus.h  Notepad_plus.rc  Notepad_plus_Window.cpp  Notepad_plus_Window.h  NppBigSwitch.cpp  NppCommands.cpp  NppIO.cpp  NppNotification.cpp  Parameters.cpp  Parameters.h  Utf8_16.cpp  menuCmdID.h  resource.h  winmain.cpp
PowerEditor/src/MISC/Common/: Common.cpp  Sorters.h  filesystem.hpp  verifySignedfile.cpp
PowerEditor/src/MISC/PluginsManager/: PluginsManager.cpp
PowerEditor/src/ScintillaComponent/: Buffer.cpp  FindReplaceDlg.cpp  FindReplaceDlg.h  FindReplaceDlg.rc  ScintillaEditView.cpp  ScintillaEditView.h  UserDefineDialog.cpp
PowerEditor/src/ScitillaComponent/: Buffer.cpp  Buffer.h  FindReplaceDlg.cpp  FindReplaceDlg.h  FindReplaceDlg.rc  ScintillaEditView.cpp  ScintillaEditView.h  UserDefineDialog.cpp
PowerEditor/src/TinyXml/: tinyxml.cpp
PowerEditor/src/WinControls/AboutDlg/: AboutDlg.cpp
PowerEditor/src/WinControls/FileBrowser/: fileBrowser.cpp
PowerEditor/src/WinControls/FunctionList/: functionListPanel.cpp
PowerEditor/src/WinControls/Grid/: BabyGrid.cpp  ShortcutMapper.cpp
PowerEditor/src/WinControls/OpenSaveFileDialog/: CustomFileDialog.cpp
PowerEditor/src/WinControls/PluginsAdmin/: pluginsAdmin.cpp  pluginsAdmin.h  pluginsAdmin.rc
PowerEditor/src/WinControls/Preference/: preferenceDlg.cpp
PowerEditor/src/WinControls/ProjectPanel/: ProjectPanel.cpp
PowerEditor/src/WinControls/ReadDirectoryChanges/: ReadDirectoryChanges.h  ReadDirectoryChangesPrivate.cpp  ReadDirectoryChangesPrivate.h  ThreadSafeQueue.h
PowerEditor/src/WinControls/StaticDialog/: StaticDialog.cpp
PowerEditor/src/WinControls/StaticDialog/RunDlg/: RunDlg.h
PowerEditor/src/WinControls/WindowsDlg/: WindowsDlg.cpp
PowerEditor/src/WinControls/shortcut/: shortcut.cpp
PowerEditor/src/json/: json.hpp
PowerEditor/src/tools/IExplorerShell/: nppIExplorerShell.cpp
PowerEditor/src/tools/NppShell/src/: Bitmap.h
PowerEditor/visual.net/: my_notepadPlus.2017.vcxproj  my_notepadPlus.2019.vcxproj  notepadPlus.2017.sln  notepadPlus.2017.vcxproj  notepadPlus.vcxproj  notepadPlus.vs2015.vcxproj  notepadPlus.vs2017.vcxproj
scintilla/boostregex/: BuildBoost.bat  nppSpecifics.mak
scintilla/include/: Scintilla.h
scintilla/lexers/: LexHTML.cxx
scintilla/win32/: SciLexer.vcxproj  compile_commands.json  my_SciLexer.vs2017.vcxproj  packages.config  scintilla.mak
tmp/: jtmp1.cpp
